Added delete option

--- a/popup.html
+++ b/popup.html
@@ -3,9 +3,11 @@
 <head>
   <title>Kiosk Tab Scheduler</title>
   <style>
-    body { width: 350px; padding: 10px; }
+    body { width: 350px; padding: 10px; font-family: Arial, sans-serif; }
     select, input { margin: 5px 0; width: 100%; }
     #dateInput { display: none; }
+    .delete-btn { cursor: pointer; color: red; margin-left: 5px; }
+    .event-item { display: flex; justify-content: space-between; align-items: center; }
   </style>
 </head>
 <body>
