--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,7 @@
     #dateInput { display: none; }
     .delete-btn { cursor: pointer; color: red; margin-left: 5px; }
     .event-item { display: flex; justify-content: space-between; align-items: center; }
+    .reload-checkbox { margin-right: 5px; }
   </style>
 </head>
 <body>
