--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Kiosk Tab Scheduler</title>
   <style>
@@ -19,30 +20,51 @@
       display: none;
     }
 
-    .delete-btn {
-      cursor: pointer;
-      color: red;
-      margin-left: 5px;
+    .event-item {
+      display: flex;
+      align-items: center;
+      margin-bottom: 10px;
+      font-size: 14px;
+    }
+
+    .favicon {
+      width: 16px;
+      height: 16px;
+      margin-right: 8px;
+      flex-shrink: 0;
+    }
+
+    .tab-title {
+      flex-grow: 1;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      margin-right: 8px;
+      max-width: 200px;
+      /* Adjust this value based on your popup width */
+    }
+
+    .reload-label {
+      display: flex;
+      align-items: center;
+      margin-right: 8px;
+      white-space: nowrap;
+      flex-shrink: 0;
     }
 
     .reload-checkbox {
-      margin-right: 5px;
+      margin-right: 4px;
     }
 
-    .event-item {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 5px;
-    }
-
-    .event-item input[type="checkbox"] {
-      margin-right: 5px;
-    }
-
-    .event-item .delete-btn {
-      margin-left: auto;
+    .delete-btn {
       cursor: pointer;
+      font-size: 18px;
+      color: #888;
+      flex-shrink: 0;
+    }
+
+    .delete-btn:hover {
+      color: #f00;
     }
   </style>
 </head>
