added module to script

--- a/popup.html
+++ b/popup.html
@@ -89,7 +89,7 @@
   <select id="tabSelect"></select>
   <button id="addSchedule">Add to Schedule</button>
   <div id="currentSchedule"></div>
-  <script src="popup.js"></script>
+  <script type="module" src="popup.js"></script>
 </body>
 
 </html>
