remove item css

--- a/popup.html
+++ b/popup.html
@@ -66,6 +66,17 @@
     .delete-btn:hover {
       color: #f00;
     }
+
+    .event-item {
+      display: flex;
+      align-items: center;
+      margin-bottom: 5px;
+    }
+
+    .remove-item {
+      margin-left: 10px;
+      cursor: pointer;
+    }
   </style>
 </head>
 
